# CodeBrief

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
code_brief/: cli.py  config.py  config_cmd.py  init.py  logger.py  metrics.py  models.py
code_brief/delivery/: email.py  github.py  slack.py  terminal.py
code_brief/github/: client.py  diff.py
code_brief/llm/: anthropic.py  chunker.py  prompt.py
tests/: test_anthropic.py  test_chunker.py  test_cli.py  test_config.py  test_config_cmd.py  test_delivery.py  test_diff.py  test_init.py  test_prompt.py
