[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-brief"
version = "1.0.1"
description = "AI-powered code review summariser"
requires-python = ">=3.12"
dependencies = [
    "PyGithub>=2.3.0",
    "httpx>=0.27.0",
    "unidiff>=0.7.5",
    "anthropic>=0.28.0",
    "openai>=1.35.0",
    "tiktoken>=0.7.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "tenacity>=8.3.0",
]

[project.scripts]
code-brief = "code_brief.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_brief*"]
